pkg/lang/testdata/ub/body-meta/valid/data-lock.ub
data: { aws.ami.this: { @lock: 'x' } }
