pkg/lang/testdata/ub/body-meta/invalid/data-trigger.ub
data: { aws.ami.this: { @trigger: 'always' } }
